# ParadoxicalEngine

./: Cargo.toml  docs.md  git.md  readme.md
src/: main.rs  prelude.rs
src/engine/: app.rs  engine.rs  mod.rs  scheduler.rs  window.rs
src/engine/components/entity_component/: entity_component.rs  entity_events.rs  mod.rs
src/engine/components/imput_component/: input_component.rs
src/engine/components/vulkan_component/: vulkan_component.rs  vulkan_events.rs
src/engine/repositories/: entity_repository.rs  input_repository.rs  mod.rs
src/engine/repositories_old/: entity_repository.rs  input_repository.rs
src/engine/services/: debug_service.rs  entity_service.rs  gamestate_service.rs  input_service.rs  mod.rs  render_service.rs  service.rs  service_locator.rs  vulkan_service.rs
src/engine/services/entity_service/: entity_events.rs  entity_service.rs  mod.rs
src/engine/services_old/: entity_service.rs  gamestate_service.rs  level_service.rs
src/engine/systems/: dashboard.rs  event_bus.rs  logger.rs  mod.rs  scheduler.rs  synchronizer.rs
src/engine/systems_old/: event_bus.rs  file_handler.rs  logger.rs
src/engine/types/: mod.rs  service_locator.rs
src/engine/utils/: debugger.rs  devtools.rs  logger.rs  mod.rs  terminal_handler.rs  tracked_values.rs
src/engine/vulkan/: vulkan_container.rs
src/resources/entities/: base_controller.rs  base_cube.rs  mod.rs  monkey.glb
src/resources/events/: entity_events.rs  mod.rs  vulkan_events.rs
src/resources/structs/: entities.rs  graphics.rs  mod.rs
src/shaders/: shader.frag  shader.vert
(+26 files in other folders)
