[package]
name = "ParadoxicalEngine"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bytemuck = "1.25.0"
chrono = "0.4.41"
configparser = "3.1.0"
futures = "0.3.31"
glam = { version = "0.30.3", features = ["bytemuck"] }
gltf = "1.4.1"
image = "0.25.6"
once_cell = "1.21.3"
ratatui = "0.30.0"
smallvec = "1.15.1"
tokio-stream = "0.1.17"
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
winit = "0.30.10"
